[Anil] comment 2 - alignment is fixed for header section

--- a/vikalp/static/css/_category_page.css.scss
+++ b/vikalp/static/css/_category_page.css.scss
@@ -15,7 +15,7 @@
   }
   a {
     position: relative;
-    bottom: -14px;
+    bottom: -32px;
   }
 }
 
